toast enhancements (fixed z-index, changed toastype to enum)

--- a/projects/ng-components/src/assets/styles/side-pane.css
+++ b/projects/ng-components/src/assets/styles/side-pane.css
@@ -1,7 +1,7 @@
 @layer components {
 
   .side-pane-outer-container {
-    @apply fixed inset-0 overflow-hidden z-50;
+    @apply fixed inset-0 overflow-hidden z-40;
   }
 
   .side-pane-overlay {
